# pyvault

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci.yml  tests.yml
app/: __main__.py  configure.py  settings.py
app/routers/: health.py  namespaces.py  secrets.py
tests/unit/app/: conftest.py  test_health.py  test_namespaces.py  test_secrets.py
